# ROS2-Cone-Detection-and-Behavior-Tree-Based-Autonomous-Reaction-using-YOLOv8

./: LICENSE  README.md  nav2_params.yaml  nav2_tree_nodes.xml  nav_to_pose_v1.xml  nav_to_pose_v2.xml  nav_to_pose_v3.xml  nav_to_pose_v4.xml  nav_to_pose_v5.xml  navigate_to_pose_w_replanning_and_recovery.xml
navigation2_tutorials/nav2_costmap_filters_demo/launch/: costmap_filter_info.launch.py
navigation2_tutorials/nav2_costmap_filters_demo/maps/: speed_mask_2.pgm  speed_mask_2.yaml
yolov8_ros/yolov8_bringup/launch/: yolov8.launch.py
your_custom_bt_node/: CMakeLists.txt  package.xml
your_custom_bt_node/include/your_custom_bt_node/: behavior_tree_engine.hpp
your_custom_bt_node/include/your_custom_bt_node/plugins/condition/: detect_object_condition.hpp
your_custom_bt_node/plugins/condition/: detect_object_condition.cpp
your_custom_bt_node/src/: behavior_tree_engine.cpp
